# dynaconf-tortoise-loader

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .pytest.ini  .releaserc.toml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.github/workflows/: develop.yml  release.yml
examples/sqlite/: .gitignore  README.md  pyproject.toml
examples/sqlite/src/app/: __main__.py  config.py
src/dynaconf_tortoise_loader/: loader.py  models.py  tortoise_loader.py
tests/: conftest.py  requirements.txt  test_dummy.py  test_tortoise.py
